VQ-3610:Ability to render client creation screen AND Unit tests on quote summary and cover comparison

--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
@@ -333,7 +333,7 @@
 
 
       <button class="btn btn-primary" type="submit" id="btnCoverTypes"
-        (click)="passCovertypeDesc(selectedCoverType);selectCover();">
+        (click)="passCovertypeDesc(selectedCoverType);selectCoverNew();">
         {{'gis.quotation.select_cover' | translate}}</button>
     </div>
   </div>
@@ -412,7 +412,7 @@
         </div>
         <div class="col-6 d-flex justify-content-end">
           <button class="btn btn-primary" type="submit" id="btnCoverTypes" data-bs-dismiss="modal"
-            (click)="updateQuote();">
+            (click)="addBenefits();">
             {{'gis.quotation.update_quote' | translate}}</button>
         </div>
 
