VQ-3609:Ability to create a new client & unit tests on covertype comparison screen

--- a/src/app/features/gis/components/quotation/components/create-client/create-client.component.html
+++ b/src/app/features/gis/components/quotation/components/create-client/create-client.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-    <app-new-client [shouldReroute]="false" (onClickSaveClient)="" ></app-new-client>
+    <app-new-client [shouldReroute]="false" [PassedGisClientData]="clientData"  ></app-new-client>
 </div>
+<!-- (onClickSaveClient)="" -->
